Rectified a few layout issues

--- a/nc-news/src/App.css
+++ b/nc-news/src/App.css
@@ -67,10 +67,14 @@ input[type="text"] {
 }
 
 img {
-  width: 80%;
-  height: 80%;
+  width: 50%;
+  height: 50%;
 }
 
 button {
   font-size: large;
+}
+
+.loader {
+  padding: 80px;
 }
