--- a/nc-news/src/layout.css
+++ b/nc-news/src/layout.css
@@ -1,5 +1,10 @@
 .AppLayout {
   display: grid;
   grid-template-columns: 1r 2fr 1fr;
-  grid-template-rows: 200px auto;
+  grid-template-rows: 220px auto;
+  /* grid-template-areas: "header"; */
 }
+
+/* .Title {
+  grid-area: header;
+} */
